--- a/LearnPiano/LearnPiano/Properties/launchSettings.json
+++ b/LearnPiano/LearnPiano/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7099;http://localhost:5119",
+      "applicationUrl": "https://192.168.0.116:7099;http://localhost:5119",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
